# MedExRAG

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.dvc/: config
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-eks.yml  mlops.yml
config/grafana/dashboards/: medical-rag-overview.json
config/grafana/provisioning/dashboards/: dashboards.yaml
config/grafana/provisioning/datasources/: datasources.yaml
config/observability/: otel-collector-config.yaml  prometheus.yml
config/observability/alerting/: prometheus-alerts.yml
docker/: .dockerignore  Dockerfile.base  Dockerfile.cli  Dockerfile.streamlit  Dockerfile.vlm-worker  docker-compose.gpu.yml  docker-compose.yml
docs/: README.md  TROUBLESHOOTING.md
docs/architecture/: RAG_ARCHITECTURE.md
docs/deployment/: CICD_GUIDE.md  DOCKER_SETUP.md  MLOPS_GUIDE.md
docs/guides/: AGENTS_GUIDE.md  RAG_GUIDE.md  STREAMLIT_GUIDE.md  VLM_GUIDE.md
docs/observability/: README.md
examples/: example_usage.py  test_ingestion.py
infra/: README.md
infra/k8s/: efs-pv.yaml  namespace.yaml
infra/k8s/cli-worker/: job-template.yaml
infra/k8s/karpenter/: gpu-nodepool.yaml
infra/k8s/observability/: grafana.yaml  jaeger.yaml  otel-collector.yaml  prometheus.yaml
infra/k8s/streamlit/: deployment.yaml  ingress.yaml  service.yaml
infra/k8s/vlm-worker/: deployment.yaml  keda-scaler.yaml  service.yaml
infra/scripts/: build-and-push.sh  deploy.sh  setup-karpenter.sh  teardown.sh
infra/terraform/: ecr.tf  efs.tf  eks.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  vpc.tf
src/medexrag/: __init__.py  __main__.py  agents.py  app.py  cli.py  vlm_server.py
src/medexrag/evaluation/: __init__.py  agent_evaluators.py  e2e_benchmarks.py  llm_judge.py  mlflow_tracking.py  retrieval_metrics.py
src/medexrag/observability/: __init__.py  context.py  health.py  langsmith_config.py  logging_config.py  metrics_config.py  tracing.py
src/medexrag/pipeline/: __init__.py  inference.py  orchestrator.py  processing.py  vectorstore.py
tests/: __init__.py  conftest.py  test_basic.py  test_evaluation.py
